# YouType

./: .dockerignore  .gitignore  Dockerfile  README.md  compose.yml  package-lock.json  package.json  pyproject.toml
.github/workflows/: deploy.yml
backend/: logging_config.py  main.py
backend/models/: __init__.py  video.py
backend/routers/: search.py  transcript.py
frontend/: package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: index.css  main.tsx  types.ts
frontend/src/components/: AutoChoiceModal.tsx  LyricsSearchModal.tsx
frontend/src/lib/: romaji.ts  useLocalStorage.ts
frontend/src/pages/: HomePage.tsx  WatchPage.css  WatchPage.tsx
youtype/: video.py
